updated notebooks to lateest verison

--- a/notebooks/invitro.ipynb
+++ b/notebooks/invitro.ipynb
@@ -2,26 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec799eec-cc1c-40ed-8418-9a25708f77db",
+   "id": "0c80ec2b-5856-4478-971a-962177fac0f2",
    "metadata": {},
    "source": [
-    "## Here we'll try to replicate the results of Venturelli et al, measuring butyrate production in synthetically constructed _in vitro_ communities"
+    "# In Vitro Communities\n",
+    "This notebook shows the full workflow for building models, simulating growth and obtaining SCFA predictions from data collected by the _in vitro_ study conducted by Clark et al, 2021. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "09f49570-1c70-4d0b-9370-2c8f869facf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/users/nbohmann/miniconda3/envs/micom2022/lib/python3.8/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
     "import pandas as pd\n",
-    "from plotnine import *\n",
-    "import numpy as np\n",
-    "import scipy\n",
     "import micom\n",
     "import micom.measures\n",
+    "from plotnine import *\n",
+    "import scipy\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ad0d35c7-d77b-4fea-8cfc-3a6359a0cf32",
    "metadata": {
     "tags": []
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e8da0bc6-a8fa-48dc-bec3-8bec22607c30",
    "metadata": {},
    "outputs": [],
@@ -125,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main = pd.read_csv('../data/invitro_original.csv',index_col=1) # get the dataframe\n",
+    "main = pd.read_csv('../data/raw_data/invitro_original.csv',index_col=1) # get the dataframe\n",
     "main[main.columns[11:37]] = main[main.columns[11:37]].fillna(0).astype('int') # convert abudances to int\n",
     "main['richness'] = main[main.columns[11:37]].sum(axis = 1) # calculate sample richness\n",
     "main['Plate'] = main['Plate'].astype('str').str.split('.').str[0].apply(lambda x: x.zfill(2)) # add column with plate number\n",
@@ -152,12 +160,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39fc9737-7691-4969-93ec-79dd38eb67d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medium = pd.read_csv('/proj/gibbons/nbohmann/exvivo/diets/DM38_Jordy.tsv', sep = '\\t', index_col = 0)\n",
+    "medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5d8c8a48-d408-450f-94e0-6400d21d3e4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "medium = pd.read_csv('../media/DM38.csv')\n",
-    "medium"
+    "medium = pd.read_csv('../media/DM38.csv')"
    ]
   },
   {
@@ -208,7 +226,7 @@
     "taxonomy = build_all(taxaLow)\n",
     "manifestLow = micom.workflows.build(taxonomy, \n",
     "                                    out_folder='../models/invitro/low_richness',\n",
-    "                                    model_db = '../agora/data', \n",
+    "                                    model_db = '../agora103_genus.qza', \n",
     "                                    cutoff=0.001,\n",
     "                                    threads=10)"
    ]
@@ -263,6 +281,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0476eac0-257c-4f63-84ff-25a418f700f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scipy.stats.pearsonr(butLow['measured'], butLow['predicted'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "25774a81-1ab9-454a-bbcd-d9c014740e0e",
    "metadata": {},
@@ -305,7 +333,7 @@
     "taxonomy = build_all(taxaHigh)\n",
     "manifestLow = micom.workflows.build(taxonomy, \n",
     "                                    out_folder='../models/invitro/high_richness,\n",
-    "                                    model_db = '../agora/data', \n",
+    "                                    model_db = '../agora103_genus.qza', \n",
     "                                    cutoff=0.001,\n",
     "                                    threads=10)"
    ]
@@ -327,7 +355,7 @@
    "outputs": [],
    "source": [
     "manifestHigh = pd.read_csv('../models/invitro/high_richness/manifest.csv')\n",
-    "growthHigh = micom.workflows.grow(manifestLow,\n",
+    "growthHigh = micom.workflows.grow(manifestHigh,\n",
     "                              '../models/invitro/high_richness',\n",
     "                              medium,\n",
     "                              tradeoff = 0.7,\n",
@@ -353,7 +381,7 @@
     "productionHigh = micom.measures.production_rates(growthHigh)\n",
     "butHigh = productionHigh[productionHigh.name == 'butyrate'].rename(columns = {'flux':'predicted'})\n",
     "butHigh['OD'] = butHigh['sample_id'].map(odHigh)\n",
-    "butHigh['measured'] = butHigh['sample_id'].map(measButHigh)/butHigh['OD']"
+    "butHigh['measured'] = butHigh['sample_id'].map(measButHigh)/butHigh['OD']\n"
    ]
   },
   {
@@ -375,7 +403,7 @@
     "butHigh['Richness'] = 'High (10-25 taxa)'\n",
     "butyrateTot = pd.concat([butLow, butHigh])\n",
     "butyrateTot['Richness'] = butyrateTot['Richness'].astype('category')\n",
-    "butyrateTot['Richness'] = butyrateTot['Richness'].cat.reorder_categories(['Low Richness (1-5 taxa)','High Richness (10-25 taxa)'])\n",
+    "butyrateTot['Richness'] = butyrateTot['Richness'].cat.reorder_categories(['Low (1-5 taxa)','High (10-25 taxa)'])\n",
     "butyrateTot.to_csv('../results/invitro.csv')"
    ]
   },
@@ -402,13 +430,33 @@
     "    +geom_smooth(method = 'lm', linetype = '--')\n",
     "    +labs(x = 'Measured, mmol/OD/h', y = 'Predicted, mmol/gDW/h', title = 'Butyrate Production')\n",
     "    +facet_wrap('Richness', scales = 'free')\n",
-    "    +theme(figure_size = (10,5),\n",
+    "        +theme(figure_size = (14,5),\n",
     "           text = element_text(size=20),panel_background=element_rect(fill = \"white\",\n",
     "                                colour = \"white\",size = 0.5, linetype = \"solid\"),panel_grid= element_blank(),\n",
     "                                axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
     "                                legend_title=element_blank(),\n",
     "                                legend_position='right'))\n",
     "plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdc651a6-f9e3-48fb-9732-a6e250b4ff39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ggsave(plot, '../results/invitro.svg',dpi = 300,format = 'svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9fe3e49-0b4d-498c-a002-1befe95ce7d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scipy.stats.pearsonr(butLow['measured'], butLow['predicted'])"
    ]
   }
  ],
