--- a/notebooks/studyA.ipynb
+++ b/notebooks/studyA.ipynb
@@ -30,8 +30,8 @@
    "id": "0e528a39-c500-4bf1-90cd-812fd5f910b1",
    "metadata": {},
    "source": [
-    "## Flux Calculation\n",
-    "Here we will calculate production rate from the experimental SCFA measurements for each sample and convert them to dicts for later use when merging with results. "
+    "## SCFA Flux\n",
+    "Here we will gather the net SCFA production across the culturing period. The \"Measured\" columns contain the measured flux over the course of the experiment (mM/h, [T1]-[T0]/h), while the \"Baseline\" columns contain the T0 concentrations (mM)"
    ]
   },
   {
@@ -41,26 +41,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scfa=pd.read_csv('../data/raw_data/studyA_original_scfas.csv')\n",
-    "scfa=scfa[['Unique Sample ID','Treatment','Time \\nPoint','Subject or Animal ID','Analyte','Result']]\n",
-    "scfa=scfa.rename(columns={'Unique Sample ID':'sample_id', # rename columns for readability\n",
-    "                          'Time \\nPoint':'timepoint',\n",
-    "                          'Treatment':'treatment',\n",
-    "                          'Subject or Animal ID':'subject_id',\n",
-    "                          'Analyte':'analyte','Result':'result'}).set_index('sample_id')\n",
-    "scfa['id'] = scfa['subject_id'].str[-1]+'_'+scfa['treatment']+'_'+scfa.index.str[1] # create unique ID for each sample\n",
-    "scfa['flux'] = scfa.groupby(['id','analyte'])['result'].diff() # calculate difference between timepoints to calculate production\n",
-    "metadata = scfa['id'].to_dict() \n",
-    "scfa = scfa.dropna()\n",
-    "scfa = pd.pivot_table(scfa,\n",
-    "                      index = 'id',\n",
-    "                      columns = 'analyte',\n",
-    "                      values = 'flux') # pivot data\n",
-    "scfa = scfa/6 # divide production by culturing time to calculate flux\n",
-    "acetateMeasured = (scfa['Acetic acid']/59.04).to_dict() # divide by molecular weight to get units in mM\n",
-    "butyrateMeasured = (scfa['Butyric acid']/88.11).to_dict()\n",
-    "propionateMeasured = (scfa['Propionic acid']/74.08).to_dict()\n",
-    "scfa.to_csv('../data/studyA_SCFAs.csv')"
+    "scfa=pd.read_csv('../data/raw_data/studyA_original_scfas.csv', index_col = 0)\n",
+    "\n",
+    "scfa['donor'] = scfa.index.str.split('_').str[0]\n",
+    "scfa['treatment'] = scfa.index.str.split('_').str[1]\n",
+    "\n",
+    "scfa = scfa.groupby(['donor','treatment']).mean().reset_index()\n",
+    "\n",
+    "scfa['sample_id'] = scfa['donor']+'_'+scfa['treatment']\n",
+    "scfa.set_index('sample_id', inplace = True)\n",
+    "\n",
+    "scfa"
    ]
   },
   {
@@ -79,8 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abundance = pd.read_csv('../data/raw_data/studyA_original_abundance.csv')\n",
-    "abundance['sample_id'] = abundance['sample'].map(metadata)\n",
+    "abundance = pd.read_csv('../data/raw_data/studyA_original_abundance.csv', index_col = 0)\n",
     "abundance = abundance.rename(columns = \n",
     "                           {'d':'domain',\n",
     "                            'p':'phylum', \n",
@@ -89,15 +79,17 @@
     "                            'f':'family',\n",
     "                            'g':'genus',\n",
     "                            's':'species',\n",
-    "                            'reads':'abundance'}).drop(\n",
-    "    columns = 'sample')\n",
-    "abundance['id'] = abundance['species'].str.replace(' ', '_')\n",
-    "abundance = abundance.groupby(['sample_id','species','id']).sum().reset_index()\n",
+    "                            'reads':'abundance'})\n",
+    "abundance = abundance.groupby(['sample_id','species']).sum().reset_index()\n",
     "table = pd.pivot_table(abundance, \n",
     "               index = 'sample_id',\n",
     "               columns = 'species',\n",
     "               values = 'abundance').fillna(0.0) # build abundance matrix\n",
-    "table.to_csv('/users/nbohmann/exvivo/studyA.csv')"
+    "abundance['species'] = abundance['species'].str.split(' ').str[1].str.lower()\n",
+    "abundance['id'] = abundance['species']\n",
+    "abundance = abundance[abundance['sample_id'].str.contains('|'.join(['control','inulin']))]\n",
+    "\n",
+    "abundance"
    ]
   },
   {
@@ -116,11 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "manifest = micom.workflows.build(taxonomy,\n",
+    "manifest = micom.workflows.build(abundance,\n",
     "                               out_folder = '../models/studyA/',\n",
-    "                               model_db = '../agora103_refseq216_species_1.qza',\n",
+    "                               model_db = '../agora103_species.qza',\n",
     "                               cutoff = 0.001, \n",
-    "                               threads = 20)"
+    "                               threads = 10)"
    ]
   },
   {
@@ -129,7 +121,7 @@
    "metadata": {},
    "source": [
     "## Load Medium\n",
-    "Load in the carbon-stripped European Diet, and construct the intervention diets by augmenting with inulin and pectin"
+    "Load in the study-specific carbon-stripped European Diet with dilution-adjusted residual fiber, and construct the intervention diets by augmenting with inulin"
    ]
   },
   {
@@ -169,7 +161,7 @@
    "outputs": [],
    "source": [
     "manifest = pd.read_csv('../models/studyA/manifest.csv')\n",
-    "controlManifest = manifest[manifest['sample_id'].str.contains('PBS')]\n",
+    "controlManifest = manifest[manifest['sample_id'].str.contains('control')]\n",
     "inulinManifest = manifest[manifest['sample_id'].str.contains('inulin')]\n",
     "\n",
     "controlGrowth = micom.workflows.grow(controlManifest,\n",
@@ -177,13 +169,13 @@
     "                              controlMedium, \n",
     "                              tradeoff = 0.7,\n",
     "                              strategy = 'none',\n",
-    "                              threads = 20)\n",
+    "                              threads = 10)\n",
     "inulinGrowth = micom.workflows.grow(inulinManifest,\n",
     "                              '../models/studyA/',\n",
     "                              inulinMedium, \n",
     "                              tradeoff = 0.7,\n",
     "                              strategy = 'none',\n",
-    "                              threads = 20)"
+    "                              threads = 10)"
    ]
   },
   {
@@ -205,31 +197,66 @@
     "inulinProduction = micom.measures.production_rates(inulinGrowth)\n",
     "controlProduction = micom.measures.production_rates(controlGrowth) # calculate predicted production rates\n",
     "production = pd.concat([inulinProduction, controlProduction])\n",
+    "\n",
     "res = production[(production['name']==('butyrate'))|\n",
     "                 (production['name']==('acetate'))|\n",
     "                 (production['name']==('propionate'))] #isolate scfas\n",
+    "\n",
     "res = pd.pivot(res, index = 'sample_id',\n",
     "                    columns = 'name',\n",
     "                    values = 'flux') # pivot data \n",
+    "\n",
     "res.rename(columns = {'acetate':'acetatePredicted',\n",
     "                      'butyrate':'butyratePredicted',\n",
     "                      'propionate':'propionatePredicted' #rename columns to identify predictions\n",
     "                      }, inplace = True\n",
     "          )\n",
-    "res['acetateMeasured'] = res.index.map(acetateMeasured)\n",
-    "res['butyrateMeasured'] = res.index.map(butyrateMeasured)\n",
-    "res['propionateMeasured'] = res.index.map(propionateMeasured) # map the corresponding measured data \n",
+    "res.index = res.index.str.replace('PBS','control')\n",
+    "\n",
+    "\n",
     "res['donor'] = res.index.str.split('_').str[0]\n",
     "res['treatment'] = res.index.str.split('_').str[1]\n",
+    "res = res.groupby(['donor','treatment']).mean().reset_index()\n",
     "\n",
-    "res.dropna(inplace = True)\n",
-    "res = res.groupby(['treatment','donor']).mean().reset_index() # calculate mean of replicates\n",
-    "res['sample_id'] = res['treatment']+'_'+res['donor']\n",
+    "res['sample_id'] = res['donor']+'_'+res['treatment']\n",
     "res.set_index('sample_id', inplace = True)\n",
-    "res['treatment'] = res['treatment'].str.replace(\n",
-    "    'PBS','Control').str.replace(\n",
-    "    'inulin','Inulin')\n",
-    "res[res.columns[2:]] = res[res.columns[2:]].astype('float')"
+    "res = pd.concat([res, scfa], axis = 1)\n",
+    "res = res.loc[:,~res.columns.duplicated()].copy()\n",
+    "\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c13ddd-2be1-45f6-ab8e-ebfd6c070c2a",
+   "metadata": {},
+   "source": [
+    "## Scale by Biomass\n",
+    "To compare results between studies we will scale the predicted SCFAs by biomass. Without accurate qPCR, we will instead use metagenomic human reads as proxy. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d7e2d71-64de-4234-8091-315caaf6d594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abundance = pd.read_csv('../data/raw_data/studyA_original_abundance.csv', index_col = 0)\n",
+    "\n",
+    "sampleReads = abundance.groupby('sample_id')['reads'].sum()\n",
+    "humanReads = abundance[abundance['g'] == 'Homo'].set_index('sample_id')['reads']\n",
+    "pctHuman = humanReads/sampleReads\n",
+    "\n",
+    "pctHuman.index = pctHuman.index.str.rstrip('_0123456789')\n",
+    "pctHuman = pctHuman.groupby(level = 0).mean().to_dict()\n",
+    "res['pct_human'] = res.index.map(pctHuman)\n",
+    "\n",
+    "res['acetatePredicted'] = res['acetatePredicted']*(1-res['pct_human'])\n",
+    "res['butyratePredicted'] = res['butyratePredicted']*(1-res['pct_human'])\n",
+    "res['propionatePredicted'] = res['propionatePredicted']*(1-res['pct_human'])\n",
+    "\n",
+    "res"
    ]
   },
   {
@@ -244,54 +271,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6afaa8b4-f6ba-4fa1-86cd-b7d79ab79fbb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig1 = (ggplot(\n",
-    "    res, aes(x = 'acetateMeasured', y = 'acetatePredicted'))\n",
-    "    +geom_smooth(method = 'lm', linetype = '--')\n",
-    "    +geom_point(aes(color = 'treatment'), size = 8)\n",
-    "    +geom_smooth(aes(groups = 'treatment', color = 'treatment', fill = 'treatment'),\n",
-    "                 method = 'lm', linetype = '--')\n",
-    "    +scale_color_manual(limits = ['Control','Inulin'], values = ['cornflowerblue', 'coral'])\n",
-    "    +labs(title='Acetate',\n",
-    "          x='Measured Acetate (mmol/L/h)',\n",
-    "          y = 'Predicted Acetate (mmol/gDW/h)',\n",
-    "          color = 'Treatment')\n",
-    "    +theme(text = element_text(size=35, color = 'black'),panel_background=element_rect(fill = \"white\",\n",
-    "                                    colour = \"white\",size = 0.5, linetype = \"solid\"),panel_grid= element_blank(),\n",
-    "                                    axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
-    "                                    legend_position='right',axis_text_x=element_text(rotation = 20, hjust = 1))\n",
-    ")\n",
-    "fig1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30f160cf-ce7c-46b2-9208-564c0df6edab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scipy.stats.linregress(res['acetatePredicted'], res['acetateMeasured'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "988c9863-0fb2-4a13-810f-8524450d8764",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig2 = (ggplot(\n",
+    "fig1 = (ggplot(\n",
     "    res, aes(x = 'butyrateMeasured', y = 'butyratePredicted'))\n",
     "    +geom_smooth(method = 'lm', linetype = '--')\n",
     "    +geom_point(aes(color = 'treatment'), size = 8)\n",
-    "    +geom_smooth(aes(groups = 'treatment', color = 'treatment', fill = 'treatment'),\n",
-    "                 method = 'lm', linetype = '--')\n",
-    "    +scale_color_manual(limits = ['Control','Pectin'], values = ['cornflowerblue', 'coral'])\n",
-    "    +labs(title='Butyrate',\n",
+    "    +scale_color_manual(limits = ['control','inulin'], \n",
+    "                        values = ['cornflowerblue', 'coral'],\n",
+    "                        labels = ['Control','Inulin'])    +labs(title='Butyrate',\n",
     "          x='Measured Butyrate (mmol/L/h)',\n",
     "          y = 'Predicted Butyrate (mmol/gDW/h)',\n",
     "          color = 'Treatment')\n",
@@ -300,7 +290,7 @@
     "                                    axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
     "                                    legend_position='right',axis_text_x=element_text(rotation = 20, hjust = 1))\n",
     ")\n",
-    "fig2"
+    "fig1"
    ]
   },
   {
@@ -320,14 +310,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig3 = (ggplot(\n",
+    "fig2 = (ggplot(\n",
     "    res, aes(x = 'propionateMeasured', y = 'propionatePredicted'))\n",
     "    +geom_smooth(method = 'lm', linetype = '--')\n",
     "    +geom_point(aes(color = 'treatment'), size = 8)\n",
-    "    +geom_smooth(aes(groups = 'treatment', color = 'treatment', fill = 'treatment'),\n",
-    "                 method = 'lm', linetype = '--', alpha = .5)\n",
-    "    +scale_color_manual(limits = ['Control','Pectin'], values = ['cornflowerblue', 'coral'])\n",
-    "    +labs(title='Propionate',\n",
+    "    +scale_color_manual(limits = ['control','inulin'], \n",
+    "                        values = ['cornflowerblue', 'coral'],\n",
+    "                        labels = ['Control','Inulin'])    +labs(title='Propionate',\n",
     "          x='Measured Propionate (mmol/L/h)',\n",
     "          y = 'Predicted Propionate (mmol/gDW/h)',\n",
     "          color = 'Treatment')\n",
@@ -336,7 +325,7 @@
     "                                    axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
     "                                    legend_position='right',axis_text_x=element_text(rotation = 20, hjust = 1))\n",
     ")\n",
-    "fig3"
+    "fig2"
    ]
   },
   {
