--- a/notebooks/studyB.ipynb
+++ b/notebooks/studyB.ipynb
@@ -17,8 +17,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np \n",
-    "import os\n",
     "import micom\n",
     "import micom.measures\n",
     "from plotnine import *\n",
@@ -32,8 +30,8 @@
    "id": "e30be5be-a803-4eba-8b4b-be0c39600a6c",
    "metadata": {},
    "source": [
-    "## Flux Calculation\n",
-    "Here we will calculate production rate from the experimental SCFA measurements and convert them to dicts for later use"
+    "## SCFA Flux\n",
+    "Here we will gather the net SCFA production across the culturing period. The \"Measured\" columns contain the measured flux over the course of the experiment (mM/h, [T1]-[T0]/h)."
    ]
   },
   {
@@ -43,21 +41,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scfa = pd.read_csv('../data/raw_data/studyB_original_scfas.csv') # read in GC-MS data\n",
-    "scfa['Acetate'] = scfa['Acetate']/4 # divide SCFA production by culturing time\n",
-    "scfa['Butyrate'] = scfa['Butyrate']/4\n",
-    "scfa['Propionate'] = scfa['Propionate']/4\n",
-    "scfa['Donor'] = scfa['Donor'].astype('str')\n",
-    "scfa['sample_id'] = scfa[['Treatment','Donor']].agg('_'.join, axis=1) # create sample ids with donor ID and treatment \n",
-    "vals = scfa.groupby(scfa['sample_id']).cumcount().values# add replicate number\n",
-    "scfa['sample_id'] = (scfa['sample_id']+'_'+ (vals+1).astype(str))\n",
-    "scfa = scfa[(scfa.Treatment.str.contains('Blank'))|\n",
-    "            (scfa.Treatment.str.contains('Pectin'))|\n",
-    "            (scfa.Treatment.str.contains('FOS'))].set_index('sample_id') # isolate samples treated with pectin or controls\n",
-    "acetateMeasured = scfa['Acetate'].to_dict()\n",
-    "butyrateMeasured = scfa['Butyrate'].to_dict()\n",
-    "propionateMeasured = scfa['Propionate'].to_dict()\n",
-    "scfa.to_csv('../data/studyB_SCFAs.csv')"
+    "scfa=pd.read_csv('../data/raw_data/studyB_original_scfas.csv', index_col = 0)\n",
+    "\n",
+    "scfa['donor'] = scfa.index.str.split('_').str[0]\n",
+    "scfa['treatment'] = scfa.index.str.split('_').str[1].str.capitalize()\n",
+    "scfa['treatment'] = scfa['treatment'].str.replace('Fos','FOS')\n",
+    "\n",
+    "scfa = scfa.groupby(['donor','treatment']).mean().reset_index()\n",
+    "\n",
+    "scfa['sample_id'] = scfa['donor']+'_'+scfa['treatment']\n",
+    "scfa.set_index('sample_id', inplace = True)\n",
+    "\n",
+    "scfa"
    ]
   },
   {
@@ -110,7 +105,6 @@
     "               index = 'sample_id',\n",
     "               columns = 'genus',\n",
     "               values = 'abundance').fillna(0.0) # build abundance matrix\n",
-    "table.to_csv('/users/nbohmann/exvivo/studyB.csv')\n",
     "abundance"
    ]
   },
@@ -132,7 +126,7 @@
    "source": [
     "manifest = micom.workflows.build(abundance,\n",
     "                                 out_folder = '../models/studyB',\n",
-    "                                 model_db = '../agora103_refseq216_s_1.qza',\n",
+    "                                 model_db = '../agora103_genus.qza',\n",
     "                                 cutoff = 0.001, \n",
     "                                 threads = 10)"
    ]
@@ -143,7 +137,7 @@
    "metadata": {},
    "source": [
     "## Load Medium\n",
-    "Load in the carbon-stripped European Diet, and construct the intervention diets by augmenting with inulin and pectin"
+    "Load in the study-specific carbon-stripped European Diet with dilution-adjusted residual fiber, and construct the intervention diets by augmenting with FOS and pectin"
    ]
   },
   {
@@ -158,8 +152,8 @@
     "controlMedium = medium\n",
     "\n",
     "pectMedium = pd.concat([medium,\n",
-    "                           pd.DataFrame({'reaction':['EX_pect_m', 'EX_amylopect900_m'],\n",
-    "                                         'flux':[1,0]\n",
+    "                           pd.DataFrame({'reaction':['EX_pect_m'],\n",
+    "                                         'flux':[1]\n",
     "                                        })]) \n",
     "fosMedium = pd.concat([medium,\n",
     "                           pd.DataFrame({'reaction':['EX_kestopt_m', 'EX_kestottr_m', 'EX_kesto_m'],\n",
@@ -199,14 +193,14 @@
     "                                  medium = pectMedium, \n",
     "                                  tradeoff = 0.7,\n",
     "                                  strategy = 'none',\n",
-    "                                  threads = 20)\n",
+    "                                  threads = 10)\n",
     "\n",
     "fosGrowth = micom.workflows.grow(fosManifest,\n",
     "                                     '../models/studyB/',\n",
     "                                     medium=fosMedium,\n",
     "                                     tradeoff=0.7, \n",
     "                                     strategy='none',\n",
-    "                                     threads = 20)"
+    "                                     threads = 10)"
    ]
   },
   {
@@ -226,35 +220,33 @@
    "outputs": [],
    "source": [
     "controlProduction = micom.measures.production_rates(controlGrowth) # Calculate production rates\n",
-    "pectProduction = micom.measures.production_rates(pectGrowth)\n",
+    "pectinProduction = micom.measures.production_rates(pectGrowth)\n",
     "fosProduction = micom.measures.production_rates(fosGrowth)\n",
     "\n",
-    "production = pd.concat([controlProduction, pectProduction,fosProduction]) # Concatenate production rates\n",
-    "scfas = production[(production['name']==('butyrate'))|\n",
-    "                   (production['name']==('acetate'))|\n",
-    "                   (production['name']==('propionate'))] # Isolate SCFAs\n",
     "\n",
-    "\n",
-    "res = pd.pivot(scfas, index = 'sample_id',\n",
-    "                         columns = 'name',\n",
-    "                         values = 'flux') # Pivot the data\n",
-    "\n",
-    "\n",
+    "production = pd.concat([controlProduction,\n",
+    "                        pectinProduction, \n",
+    "                        fosProduction]) # concatenate results \n",
+    "res = production[(production['name']==('butyrate'))|\n",
+    "                 (production['name']==('acetate'))|\n",
+    "                 (production['name']==('propionate'))] # filter to SCFA production \n",
+    "res = pd.pivot(res, index = 'sample_id',\n",
+    "                    columns = 'name',\n",
+    "                    values = 'flux') # pivot data\n",
     "res.rename(columns = {'acetate':'acetatePredicted',\n",
     "                      'butyrate':'butyratePredicted',\n",
-    "                      'propionate':'propionatePredicted' # Rename columns for simplicity\n",
-    "                      }, inplace = True\n",
+    "                      'propionate':'propionatePredicted'\n",
+    "                      }, inplace = True # rename columns for clarity \n",
     "          )\n",
-    "res['acetateMeasured'] = res.index.map(acetateMeasured) # Map measured production rates onto dataframe\n",
-    "res['butyrateMeasured'] = res.index.map(butyrateMeasured)\n",
-    "res['propionateMeasured'] = res.index.map(propionateMeasured)\n",
-    "res['treatment'] = res.index.str.split('_').str[0] # Get identifiers from sample ID\n",
+    "\n",
     "res['donor'] = res.index.str.split('_').str[1]\n",
-    "res = res.groupby(['treatment','donor']).mean().reset_index() # Get mean of replicates\n",
-    "res['sample_id'] = res['treatment']+'_'+res['donor'] \n",
+    "res['treatment'] = res.index.str.split('_').str[0]\n",
+    "res = res.groupby(['donor','treatment']).mean().reset_index()\n",
+    "res['sample_id'] = res['donor']+'_'+res['treatment']\n",
     "res.set_index('sample_id', inplace = True)\n",
-    "res[res.columns[2:]] = res[res.columns[2:]].astype('float')\n",
-    "res['treatment'] = res['treatment'].str.replace('Blank','Control') # Rename controls\n",
+    "res = pd.concat([res, scfa], axis = 1)\n",
+    "res = res.loc[:,~res.columns.duplicated()].copy()\n",
+    "res['treatment'] = res['treatment'].str.replace('Blank','Control')\n",
     "res"
    ]
   },
@@ -270,47 +262,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa54e68-17a5-4cb4-a905-639a07b62191",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig1 = (ggplot(\n",
-    "    res, aes(x = 'acetateMeasured', y = 'acetatePredicted'))\n",
-    "    +geom_smooth(method = 'lm', linetype = '--')\n",
-    "    +geom_point(aes(color = 'treatment'), size = 8)\n",
-    "    +scale_color_manual(limits = ['Control','Pectin', 'FOS'], \n",
-    "                        values = ['cornflowerblue', 'mediumseagreen', 'purple'])\n",
-    "    +labs(title='Acetate',\n",
-    "          x='Measured Acetate (mmol/L/h)',\n",
-    "          y = 'Predicted Acetate (mmol/gDW/h)',\n",
-    "          color = 'Treatment')\n",
-    "    +theme(text = element_text(size=35, color = 'black'),panel_background=element_rect(fill = \"white\",\n",
-    "                                    colour = \"white\",size = 0.5, linetype = \"solid\"),panel_grid= element_blank(),\n",
-    "                                    axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
-    "                                    legend_position='right',axis_text_x=element_text(rotation = 20, hjust = 1))\n",
-    ")\n",
-    "fig1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb821242-0d48-400a-80d7-0ba65848eb4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scipy.stats.linregress(res['acetatePredicted'],\n",
-    "                       res['acetateMeasured'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "68afa49f-080b-4232-932d-9fd7e961ee42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig2 = (ggplot(\n",
+    "fig1 = (ggplot(\n",
     "    res, aes(x = 'butyrateMeasured', y = 'butyratePredicted'))\n",
     "    +geom_smooth(method = 'lm', linetype = '--')\n",
     "    +geom_point(aes(color = 'treatment'), size = 8)\n",
@@ -325,7 +281,7 @@
     "                                    axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
     "                                    legend_position='right',axis_text_x=element_text(rotation = 20, hjust = 1))\n",
     ")\n",
-    "fig2"
+    "fig1"
    ]
   },
   {
@@ -346,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig3 = (ggplot(\n",
+    "fig2 = (ggplot(\n",
     "    res, aes(x = 'propionateMeasured', y = 'propionatePredicted'))\n",
     "    +geom_smooth(method = 'lm', linetype = '--')\n",
     "    +geom_point(aes(color = 'treatment'), size = 8)\n",
@@ -361,7 +317,7 @@
     "                                    axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
     "                                    legend_position='right',axis_text_x=element_text(rotation = 20, hjust = 1))\n",
     ")\n",
-    "fig3"
+    "fig2"
    ]
   },
   {
@@ -376,6 +332,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3677eea-9434-4394-a5c5-0387747e9fdf",
+   "metadata": {},
+   "source": [
+    "## Save all results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b5b9e0e7-ad99-46fe-8c83-5a76d11e022f",
@@ -384,6 +348,14 @@
    "source": [
     "res.to_csv('../results/studyB.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4616836e-e7e3-489f-81bd-e88f55acbd09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
