--- a/notebooks/studyC.ipynb
+++ b/notebooks/studyC.ipynb
@@ -17,11 +17,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np \n",
     "import micom\n",
     "import micom.measures\n",
-    "import scipy\n",
     "from plotnine import *\n",
+    "import scipy\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -31,16 +30,8 @@
    "id": "27c867f1-2644-460c-9ec7-4a5f4b03c674",
    "metadata": {},
    "source": [
-    "## Flux Calculation\n",
-    "This function will calculate production rate from the experimental SCFA measurements, as well as standard deviations, and concatenate them into a dataframe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "87af6d7e-3956-4ca8-b073-51b689a8ab8c",
-   "metadata": {},
-   "source": [
-    "Here we'll iterate the above function across GC-MS data for each sample."
+    "## SCFA Flux\n",
+    "Here we will gather the net SCFA production across the culturing period. The \"Measured\" columns contain the measured flux over the course of the experiment (mM/h, [T1]-[T0]/h), while the \"Baseline\" columns contain the T0 concentrations (mM)"
    ]
   },
   {
@@ -50,9 +41,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scfa = pd.read_csv('../data/raw_data/studyC_original_scfas.csv')\n",
-    "scfa = scfa[scfa['treatment'] != 'INUL+PECT']\n",
-    "scfa = scfa.groupby(['index','sample','treatment']).mean().reset_index()\n",
+    "scfa = pd.read_csv('../data/raw_data/studyC_original_scfas.csv',index_col = 0)\n",
+    "\n",
+    "scfa['donor'] = scfa.index.str.split('_').str[0]\n",
+    "scfa['treatment'] = scfa.index.str.split('_').str[1]\n",
+    "\n",
+    "scfa = scfa.groupby(['donor','treatment']).mean().reset_index()\n",
+    "\n",
+    "scfa = scfa[scfa['treatment']!='inulin+pectin']\n",
+    "\n",
+    "scfa['sample_id'] = scfa['donor']+'_'+scfa['treatment']\n",
+    "scfa.set_index('sample_id', inplace = True)\n",
     "scfa"
    ]
   },
@@ -73,16 +72,16 @@
    "outputs": [],
    "source": [
     "abundance = pd.read_csv('../data/raw_data/studyC_original_abundances.csv') # Read in abundances\n",
-    "abundance['id'] = abundance['s']\n",
-    "abundance = abundance[['sample','id','reads','s']] # Filter table to relevant columns\n",
+    "abundance = abundance[['sample','reads','s']] # Filter table to relevant columns\n",
     "abundance.rename(columns = {'sample':'sample_id','reads':'abundance','s':'species'}, inplace = True) # Rename for clarity\n",
-    "abundance = abundance.groupby(by = ['sample_id','id','species']).sum().reset_index() #Sum duplicates\n",
-    "abundance['species'] = abundance.species.str.replace('_',' ')\n",
+    "abundance = abundance.groupby(by = ['sample_id','species']).sum().reset_index() #Sum duplicates\n",
     "table = pd.pivot_table(abundance,  # Pivot to create abundance matrix\n",
     "               index = 'sample_id',\n",
     "               columns = 'species',\n",
     "               values = 'abundance').fillna(0.0)\n",
     "table.to_csv('../data/studyC.csv')\n",
+    "abundance['species'] = abundance['species'].str.split('_').str[1].str.lower()\n",
+    "abundance['id'] = abundance['species']\n",
     "abundance"
    ]
   },
@@ -103,8 +102,8 @@
    "outputs": [],
    "source": [
     "manifest = micom.workflows.build(abundance, \n",
-    "                                 out_folder = '../models/studyC'\n",
-    "                                 model_db = '../agora103_refseq216_species_1.qza',\n",
+    "                                 out_folder = '../models/studyC',\n",
+    "                                 model_db = '../agora103_species.qza',\n",
     "                                 cutoff = 0.001,\n",
     "                                 threads = 10)"
    ]
@@ -125,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medium = pd.read_csv('../media/studyCmedium.csv')\n",
+    "medium = pd.read_csv('../media/studyCmedium.csv', index_col = 1)\n",
     "\n",
     "controlMedium = medium\n",
     "\n",
@@ -135,7 +134,7 @@
     "                                         'metabolite':['pect_m'],\n",
     "                                         'global_id':['EX_pect(e)'],\n",
     "                                         'flux':[1]\n",
-    "                                        },index = ['pect_m'])])\n",
+    "                                        },index = ['EX_pect_m'])])\n",
     "\n",
     "\n",
     "inulinMedium = pd.concat([medium,\n",
@@ -143,7 +142,9 @@
     "                                         'metabolite':['inulin_m'],\n",
     "                                         'global_id':['EX_inulin(e)'],\n",
     "                                         'flux':[14]\n",
-    "                                        },index = ['inulin_m'])])"
+    "                                        },index = ['EX_inulin_m'])])\n",
+    "\n",
+    "inulinMedium"
    ]
   },
   {
@@ -151,7 +152,7 @@
    "id": "aeb4688c-c308-4170-acc7-a678f1a1ed58",
    "metadata": {},
    "source": [
-    "# Grow Models\n",
+    "## Grow Models\n",
     "Now we'll grow the samples using the respective media we constructed"
    ]
   },
@@ -168,19 +169,21 @@
     "                                  medium = controlMedium, \n",
     "                                  tradeoff = 0.7,\n",
     "                                  strategy ='none', \n",
-    "                                  threads = 20)\n",
+    "                                  threads = 10)\n",
+    "\n",
     "pectinGrowth = micom.workflows.grow(manifest,\n",
     "                                  model_folder='../models/studyC',\n",
     "                                  medium = pectinMedium, \n",
     "                                  tradeoff = 0.7, \n",
     "                                  strategy = 'none', \n",
-    "                                  threads = 20)\n",
+    "                                  threads = 10)\n",
+    "\n",
     "inulinGrowth = micom.workflows.grow(manifest, \n",
     "                                  model_folder='../models/studyC',\n",
     "                                  medium = inulinMedium, \n",
     "                                  tradeoff = 0.7, \n",
     "                                  strategy = 'none',\n",
-    "                                  threads = 20)"
+    "                                  threads = 10)"
    ]
   },
   {
@@ -202,18 +205,18 @@
    "outputs": [],
    "source": [
     "controlProduction = micom.measures.production_rates(controlGrowth)\n",
-    "controlProduction['treatment'] = 'CTRL'\n",
-    "pectProduction = micom.measures.production_rates(pectGrowth)\n",
-    "pectProduction['treatment'] = 'PECT'\n",
+    "controlProduction['treatment'] = 'control'\n",
+    "pectinProduction = micom.measures.production_rates(pectinGrowth)\n",
+    "pectinProduction['treatment'] = 'pectin'\n",
     "inulinProduction = micom.measures.production_rates(inulinGrowth)\n",
-    "inulinProduction['treatment'] = 'INUL'\n",
-    "production = pd.concat([controlProduction, pectProduction, inulinProduction])\n",
+    "inulinProduction['treatment'] = 'inulin'\n",
+    "production = pd.concat([controlProduction, pectinProduction, inulinProduction])\n",
     "production['sample_id'] = production['sample_id']+'_'+production['treatment']\n",
-    "scfas = production[(production['name']==('butyrate'))|\n",
+    "res = production[(production['name']==('butyrate'))|\n",
     "                   (production['name']==('acetate'))|\n",
     "                   (production['name']==('propionate'))]\n",
     "\n",
-    "res = pd.pivot(scfas, index = 'sample_id', \n",
+    "res = pd.pivot(res, index = 'sample_id', \n",
     "                         columns = 'name',\n",
     "                         values = 'flux')\n",
     "res.rename(columns = {'acetate':'acetatePredicted',\n",
@@ -221,13 +224,37 @@
     "                      'propionate':'propionatePredicted'\n",
     "                      }, inplace = True\n",
     "          )\n",
-    "res['acetateMeasured'] = res.index.map(acetateMeasured)\n",
-    "res['butyrateMeasured'] = res.index.map(butyrateMeasured)\n",
-    "res['propionateMeasured'] = res.index.map(propionateMeasured)\n",
-    "res['treatment'] = res.index.str.split('_').str[1].str.replace(\n",
-    "    'CTRL','Control').str.replace(\n",
-    "    'INUL','Inulin').str.replace(\n",
-    "    'PECT','Pectin')\n",
+    "res = pd.concat([res, scfa], axis = 1)\n",
+    "res.dropna(inplace = True)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "515dd02e-f3f3-4119-a7fc-18378d192f07",
+   "metadata": {},
+   "source": [
+    "## Scale by Biomass\n",
+    "To compare results between studies we will scale the predicted SCFAs by biomass. Without accurate qPCR, we will instead use human reads as proxy. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a862bf9b-af60-49e8-9e77-e5fa49305180",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abundance = pd.read_csv('../data/raw_data/studyC_original_abundances.csv')\n",
+    "sampleReads = abundance.groupby('sample')['reads'].sum()\n",
+    "humanReads = abundance[abundance['g']=='Homo'].set_index('sample')['reads']\n",
+    "pctHuman = humanReads/sampleReads                                                \n",
+    "pctHuman = pctHuman.groupby(level = 0).mean().to_dict()\n",
+    "res['pct_human'] = res['donor'].map(pctHuman)\n",
+    "res['acetatePredicted'] = res['acetatePredicted']*(1-res['pct_human'])\n",
+    "res['butyratePredicted'] = res['butyratePredicted']*(1-res['pct_human'])\n",
+    "res['propionatePredicted'] = res['propionatePredicted']*(1-res['pct_human'])\n",
+    "\n",
     "res"
    ]
   },
@@ -245,51 +272,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aa4ba84-45ba-438f-9f99-6189c787191a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig1 = (ggplot(\n",
-    "    res, aes(x = 'acetateMeasured', y = 'acetatePredicted'))\n",
-    "    +geom_smooth(method = 'lm', linetype = '--')\n",
-    "    +geom_point(aes(color = 'treatment'), size = 8)\n",
-    "    +scale_color_manual(limits = ['Control','Inulin','Pectin'], \n",
-    "                        values = ['cornflowerblue', 'coral', 'mediumseagreen'])\n",
-    "    +labs(title='Acetate',\n",
-    "          x='Measured ($\\dfrac{mmol}{L*h}$)',\n",
-    "          y = 'Predicted ($\\dfrac{mmol}{gDCW*h}$)',\n",
-    "          color = 'Treatment')\n",
-    "    +theme(text = element_text(size=35, color = 'black'),panel_background=element_rect(fill = \"white\",\n",
-    "                                    colour = \"white\",size = 0.5, linetype = \"solid\"),panel_grid= element_blank(),\n",
-    "                                    axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
-    "                                    legend_position='right',axis_text_x=element_text(rotation = 20, hjust = 1))\n",
-    ")\n",
-    "fig1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27bca56b-5b7d-4671-8fde-04f7486647cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scipy.stats.linregress(res['acetatePredicted'], res['acetateMeasured'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7dd873b2-316d-4a8f-ba33-cc80416e37f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig2 = (ggplot(\n",
+    "fig1 = (ggplot(\n",
     "    res, aes(x = 'butyrateMeasured', y = 'butyratePredicted'))\n",
     "    +geom_smooth(method = 'lm', linetype = '--')\n",
     "    +geom_point(aes(color = 'treatment'), size = 8)\n",
-    "    +scale_color_manual(limits = ['Control','Inulin','Pectin'], \n",
-    "                        values = ['cornflowerblue', 'coral', 'mediumseagreen'])\n",
+    "    +scale_color_manual(limits = ['control','inulin','pectin'], \n",
+    "                        values = ['cornflowerblue', 'coral', 'mediumseagreen'],\n",
+    "                        labels = ['Control','Inulin','Pectin'])\n",
     "    +labs(title='Butyrate',\n",
     "          x='Measured ($\\dfrac{mmol}{L*h}$)',\n",
     "          y = 'Predicted ($\\dfrac{mmol}{gDCW*h}$)',\n",
@@ -300,7 +293,7 @@
     "                                    axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
     "                                    legend_position='right',axis_text_x=element_text(rotation = 20, hjust = 1))\n",
     ")\n",
-    "fig2"
+    "fig1"
    ]
   },
   {
@@ -310,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scipy.stats.linregress(res['butyratePredicted'], res['butyrateMeasured'])"
+    "scipy.stats.pearsonr(res['butyratePredicted'], res['butyrateMeasured'])"
    ]
   },
   {
@@ -320,12 +313,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig3 = (ggplot(\n",
+    "fig2 = (ggplot(\n",
     "    res, aes(x = 'propionateMeasured', y = 'propionatePredicted'))\n",
     "    +geom_smooth(method = 'lm', linetype = '--')\n",
     "    +geom_point(aes(color = 'treatment'), size = 8)\n",
-    "    +scale_color_manual(limits = ['Control','Inulin','Pectin'], \n",
-    "                        values = ['cornflowerblue', 'coral', 'mediumseagreen'])\n",
+    "    +scale_color_manual(limits = ['control','inulin','pectin'], \n",
+    "                        values = ['cornflowerblue', 'coral', 'mediumseagreen'],\n",
+    "                        labels = ['Control','Inulin','Pectin'])\n",
     "    +labs(title='Propionate',\n",
     "          x='Measured ($\\dfrac{mmol}{L*h}$)',\n",
     "          y = 'Predicted ($\\dfrac{mmol}{gDCW*h}$)', \n",
@@ -335,7 +329,7 @@
     "                                    axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
     "                                    legend_position='right',axis_text_x=element_text(rotation = 20, hjust = 1))\n",
     ")\n",
-    "fig3"
+    "fig2"
    ]
   },
   {
@@ -345,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scipy.stats.linregress(res['propionatePredicted'], res['propionateMeasured'])"
+    "scipy.stats.pearsonr(res['propionatePredicted'], res['propionateMeasured'])"
    ]
   },
   {
